# rfe

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build_and_test.yml
examples/: print_sweep.rs  rfe_sweep.rs
ffi/: Cargo.toml  README.md  build.rs
ffi/bindings/rfe-c/: CMakeLists.txt  README.md  common.h  rfe_info.c  rfe_sweep.c  rfe_sweep_with_callback.c
ffi/examples/c/: CMakeLists.txt  README.md  common.h  rfe_info.c  rfe_sweep_with_callback.c
ffi/examples/dotnet/: README.md  Rfe.slnx
ffi/examples/dotnet/Rfe.Net/: Config.cs  Enums.cs  NativeHelpers.cs  Rfe.Net.csproj  Rfe.cs  RfeException.cs  ScreenData.cs  SignalGenerator.cs  SpectrumAnalyzer.cs
ffi/examples/dotnet/examples/Info/: Info.csproj  Program.cs
ffi/examples/dotnet/examples/Sweep/: Program.cs
ffi/include/: NativeMethods.g.cs  NativeTypes.cs  rfe.h
ffi/src/: lib.rs
ffi/src/common/: callback.rs  mod.rs  result.rs  screen_data.rs
ffi/src/signal_generator/: config.rs  list.rs  mod.rs  model.rs  radio_module.rs  rf_explorer.rs
ffi/src/spectrum_analyzer/: config.rs  mod.rs  model.rs  rf_explorer.rs  sweep.rs
gui/: Cargo.toml  README.md
gui/src/: app.rs  lib.rs  main.rs  plot_settings.rs  rfe_info.rs  sweep_settings.rs  sweeps.rs  units.rs
gui/src/data/: mod.rs  rfe_info.rs  spectrogram_data.rs  trace_data.rs
gui/src/panels/: app_settings_bottom_panel.rs  bottom_panel.rs  mod.rs  plot_central_panel.rs  plot_settings_panel.rs  plot_settings_side_panel.rs  rfe_not_connected_central_panel.rs  rfe_settings_panel.rs  rfe_settings_side_panel.rs  settings_side_panel.rs
gui/src/settings/: app_settings.rs  color_gradient.rs  frequency_units.rs  mod.rs  plot_settings.rs  rfe_settings.rs  spectrogram_settings.rs  sweep_settings.rs  trace_settings.rs  units.rs
gui/src/widgets/: buttons.rs  combo_boxes.rs  mod.rs  plot.rs  spectrogram.rs  trace.rs
lib/: Cargo.toml  README.md
lib/examples/: rfe_info.rs  rfe_sweep.rs  rfe_sweep_with_callback.rs
lib/src/: lib.rs
lib/src/common/: device.rs  error.rs  frequency.rs  message.rs  mod.rs  serial_port.rs
lib/src/rf_explorer/: command.rs  device.rs  mod.rs  parsers.rs  screen_data.rs  serial_number.rs  setup_info.rs
lib/src/signal_generator/: command.rs  config.rs  config_amp_sweep.rs  config_cw.rs  config_freq_sweep.rs  message.rs  mod.rs  model.rs  parsers.rs  rf_explorer.rs  setup_info.rs  temperature.rs
lib/src/spectrum_analyzer/: config.rs  dsp_mode.rs  input_stage.rs  message.rs  mod.rs  model.rs  parsers.rs  rf_explorer.rs  setup_info.rs  sweep.rs  tracking_status.rs  wifi_band.rs
rfe/: Cargo.toml
rfe-ffi/: Cargo.toml  README.md  build.rs  rfe.h
rfe-ffi/bindings/rfe-c/: rfe_info.c  rfe_sweep.c  rfe_sweep_with_callback.c
rfe-ffi/include/: rfe.h
rfe-ffi/src/: lib.rs  rf_explorer.rs
rfe-ffi/src/common/: callback.rs  mod.rs  model.rs  result.rs  serial_port.rs
rfe-ffi/src/signal_generator/: config.rs  mod.rs  rf_explorer.rs
rfe-ffi/src/spectrum_analyzer/: config.rs  list.rs  mod.rs  model.rs  radio_module.rs  rf_explorer.rs
rfe/examples/: rfe_sweep.rs  rfe_sweep_with_callback.rs
rfe/src/: lib.rs
rfe/src/common/: device.rs  message.rs  mod.rs  radio_module.rs  rf_explorer.rs  screen_data.rs  serial_port.rs  setup_info.rs
rfe/src/rf_explorer/: device.rs  serial_number.rs  setup_info.rs
rfe/src/signal_generator/: command.rs  config.rs  config_amp_sweep.rs  config_cw.rs  config_freq_sweep.rs  device.rs  message.rs  mod.rs  rf_explorer.rs  setup_info.rs  temperature.rs
rfe/src/spectrum_analyzer/: config.rs  device.rs  dsp_mode.rs  input_stage.rs  message.rs  mod.rs  model.rs  parsers.rs  rf_explorer.rs  setup_info.rs  tracking_status.rs
rfe_message/: Cargo.toml
rfe_message/src/: lib.rs
src/: config.rs  lib.rs  model.rs  rf_explorer.rs  serial_number.rs  setup.rs  signal_generator.rs  spectrum_analyzer.rs  sweep.rs
src/common/: command.rs  device.rs  error.rs  message.rs  mod.rs  model.rs  rf_explorer.rs  screen_data.rs  serial_number.rs  serial_port.rs  setup_info.rs
src/devices/: mod.rs  rf_explorer.rs  signal_generator.rs  spectrum_analyzer.rs
src/messages/: mod.rs
src/messages/common/: mod.rs  screen_data.rs  serial_number.rs
src/messages/signal_generator/: mod.rs  temperature.rs
src/messages/spectrum_analyzer/: config.rs  dsp_mode.rs  mod.rs  setup.rs  sweep.rs  tracking_status.rs
src/rf_explorer/: command.rs  device.rs  error.rs  frequency.rs  message.rs  mod.rs  model.rs  parsers.rs  rf_explorer.rs  screen_data.rs  serial_number.rs  serial_port.rs  setup.rs  setup_info.rs
src/signal_generator/: command.rs  config.rs  config_amp_sweep.rs  config_cw.rs  config_freq_sweep.rs  device.rs  message.rs  mod.rs  model.rs  parsers.rs  rf_explorer.rs  setup.rs  setup_info.rs  signal_generator.rs  temperature.rs
src/spectrum_analyzer/: command.rs  config.rs  device.rs  dsp_mode.rs  input_stage.rs  message.rs  mod.rs  model.rs  parsers.rs  rf_explorer.rs  setup.rs  setup_info.rs  spectrum_analyzer.rs  sweep.rs  tracking_status.rs
