[package]
name = "rfe"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
chrono = "0.4"
thiserror = "1.0.20"
nom = "7"
num_enum = "0.5"
serialport = "4.2"
uom = { version = "0.33", features = ["u64"] }
