[package]
name = "rfe-gui"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2021"
rust-version = "1.72"

[dependencies]
csv = "1.3.0"
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.28.1"
egui_extras = "0.28.1"
egui_plot = "0.28.1"
rfd = "0.14.1"
rfe = { path = "../lib" }
