[package]
name = "rfe-gui"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2024"

[dependencies]
colorous = "1.0.14"
csv = "1.3.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
] }
egui = "0.33.0"
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
egui_plot = "0.34.0"
rfd = "0.15.0"
rfe = { path = "../lib" }
ringbuffer = "0.15.0"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wgpu = "27" # enables the wgpu default features so we get the default backends

[target.'cfg(target_os = "linux")'.dependencies.winit]
version = "*"
features = ["wayland-csd-adwaita"]
