[package]
name = "rfe-gui"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2024"

[dependencies]
colorous = "1.0.16"
csv = "1.4.0"
eframe = { version = "0.34.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
] }
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
egui_plot = "0.35.0"
rfd = "0.17.2"
rfe = { version = "0.1.0", path = "../lib" }
ringbuffer = "0.16.0"
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wgpu = "29" # enables the wgpu default features so we get the default backends

[target.'cfg(target_os = "linux")'.dependencies.winit]
version = "0.30.13"
features = ["wayland-csd-adwaita"]
