[package]
name = "rfe"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
chrono = "0.4"
nom = "8"
num_enum = { version = "0.7", features = ["complex-expressions"] }
serialport = "4.6.0"
thiserror = "1"
tracing = "0.1"
uom = { version = "0.36.0", features = ["u64"] }
