[package]
name = "rfe"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library for communicating with RF Explorer spectrum analyzers and signal generators"
repository = "https://github.com/zleytus/rfe"
documentation = "https://docs.rs/rfe"
keywords = ["rf-explorer", "spectrum-analyzer", "signal-generator", "serial"]
categories = ["hardware-support"]

[dependencies]
chrono = "0.4"
nom = "8"
num_enum = { version = "0.7", features = ["complex-expressions"] }
serialport = "4.9.0"
thiserror = "1"
tracing = "0.1"
uom = { version = "0.38.0", features = ["u64"] }
