[package]
name = "rfe"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
chrono = "0.4"
nom = "7"
num_enum = "0.6.1"
serialport = "4.2.2"
thiserror = "1"
tracing = "0.1"
uom = { version = "0.34.0", features = ["u64"] }
